2.1.1. Parsing https://career.habr.com/vacancies/java_developer?page=1  [#285210]